weather app working - pre long lat

--- a/public/tasks.html
+++ b/public/tasks.html
@@ -26,7 +26,6 @@
                 <li><a href="work.html">Work Experience</a></li>
                 <li><a href="education.html">Education/Skills</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="pirate.html">Treasure Island</a></li>
             </ul>
         </header>
     </div>
@@ -34,11 +33,13 @@
         <h2 class="title">Tasks</h2>
         <div class="education-main-text">
             <p>
-                As part of my Software Engineering course, I was asked to create two web based games to show some of my skills. The following buttons will take you to examples of this work:
+                The tasks below have been completed as part of my Software Engineering course, or during self guided online courses.
             </p>
         </div>
-        <h2 class="title games" style="float: left;"><a href="hangman.html">Hangman</a></h2>
-        <h2 class="title games" style="float: right;"><a href="think.html">Think of a number</a></h2>
+        <h2 class="title games"><a href="pirate.html">Treasure Island Website</a></h2>
+        <h2 class="title games"><a href="weather.html">Weather App</a></h2>
+        <h2 class="title games"><a href="hangman.html">Hangman</a></h2>
+        <h2 class="title games" ><a href="think.html">Think of a number</a></h2>
     </div>
     <div id="menu-outer">
         <div class="table">
