task amendment, include default for current location on weather app

--- a/public/weather.html
+++ b/public/weather.html
@@ -29,13 +29,13 @@
 
         <main>
             <section class="location">
-                <div class="city">Sheffield, GB</div>
-                <div class="date">Tuesday, 11 August 2020</div>
+                <div class="city"></div>
+                <div class="date"></div>
             </section>
             <div class="current">
-                <div class="temp">15<span>°c</span></div>
-                <div class="weather">Sunny</div>
-                <div class="hi-low">13°c / 16°c</div>
+                <div class="temp"><span></span></div>
+                <div class="weather"></div>
+                <div class="hi-low"></div>
             </div>
         </main>
     </div>
