--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
         <div class="info">
             <h1> DEVELOPER, EDUCATOR, <br> RESPONDER</h1>
-            <a class="button" href="EmmaMcDonald-Brown.docx" download="EmmaMcDonald-Brown.docx"> Download CV</a>
+            <a class="button" href="EmmaMcDonald-Brown.pdf" download="EmmaMcDonald-Brown.docx"> Download CV</a>
         </div>
     </div>
 </body>
