slack clone addition

--- a/public/tasks.html
+++ b/public/tasks.html
@@ -36,6 +36,7 @@
                 The tasks below have been completed as part of my Software Engineering course, or during self guided online courses.
             </p>
         </div>
+        <h2 class="title games"><a href="https://comm-app-1adc7.web.app">Slack Clone (JS/React)</a></h2>
         <h2 class="title games"><a href="pirate.html">Treasure Island Website</a></h2>
         <h2 class="title games"><a href="weather.html">Weather App</a></h2>
         <h2 class="title games"><a href="hangman.html">Hangman</a></h2>
