add github links

--- a/public/about.html
+++ b/public/about.html
@@ -37,10 +37,19 @@
         <div class="about-me-main-text">
             <p>
                 <br />
-                Over 12 years' experience as an Openedge developer, mainly GUI but some CHUI.
+                I am in the process of completing MSc Computer Science (Software Engineering).
+                <br />
+                This required the development of projects using Java and Netbeans, as well as creating this portfolio website using HTML5, CSS3, and some Javascript. It is deployed using Firebase. 
+                I also completed a cloud computing module, focusing on AWS and following the AWS Cloud Computing Architecture course, and an Enterprise Systems module utilising Azure DevOps for project management.
                 <br />
                 <br />
-                Some recent exposure to AWS, Java, Javascript, JSON, HTML, CSS and JQuery.
+                Currently, I am completing online courses in JavaScript and React, using Visual Studio Code, developing applications which can be viewed <a href="tasks.html">here</a>. Some of these utilise Google authentication and Cloud FireStore, and are deployed with Firebase.
+                <br />
+                <br />
+                Source control is via Git /GitHub, with previous experience of SVN and Sourcetree.
+                <br />
+                <br />
+                Over 12 years' experience as an Openedge developer, mainly GUI but some CHUI, and database design and maintenance.
                 <br />
                 <br />
                 Nine years' experience of working in education, including work as a maths, English and ICT lecturer, ICT Advanced Practitioner, and freelance first aid and safeguarding instructor.
@@ -78,6 +87,9 @@
                 </li>
                 <li>
                     <a href="mailto:emma.mcdonald-brown@outlook.com?Subject=Contact from your CV Page" target="_top"><i class="far fa-envelope"></i></a>
+                </li>
+                <li>
+                    <a href="https://github.com/emcdonaldbrown" target="_top"><i class="fab fa-github"></i></a>
                 </li>
             </ul>
         </div>
