--- a/public/think.html
+++ b/public/think.html
@@ -62,6 +62,9 @@
                 <li>
                     <a href="mailto:emma.mcdonald-brown@outlook.com?Subject=Contact from your CV Page" target="_top"><i class="far fa-envelope"></i></a>
                 </li>
+                <li>
+                    <a href="https://github.com/emcdonaldbrown" target="_top"><i class="fab fa-github"></i></a>
+                </li>
             </ul>
         </div>
     </div>
