change to textarea

--- a/public/contact.html
+++ b/public/contact.html
@@ -36,8 +36,11 @@
             <input type="text" name="name" placeholder="Name">
             <br> Email:<br>
             <input type="email" name="email" placeholder="Email Address">
-            <br> Query:<br>
-            <input type="text" name="query" placeholder="Query">
+            <br>
+            <label for="query">Query:</label>
+            <br>
+            <textarea id="query" name="query" rows="4" cols="50">            
+            </textarea>
             <br><br>
             <input type="submit" value="Submit">
         </form>
