--- a/public/Old Pages/home.html
+++ b/public/Old Pages/home.html
@@ -99,7 +99,7 @@
             <footer> 
                 <ul>
                     <li><a href="https://www.linkedin.com/in/emma-mcdonald-brown-bb187a28/ " target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="mailto:emma.mcdonald-brown@outlook.com?Subject=Contact from your CV Page" target="_top"><i class="far fa-envelope"></i></a>/li>
+                    <li><a href="mailto:emma@embdeveloper.co.uk?Subject=Contact from your CV Page" target="_top"><i class="far fa-envelope"></i></a>/li>
                 </ul>
             </footer>
         </div>
