--- a/public/tasks.html
+++ b/public/tasks.html
@@ -49,7 +49,7 @@
                     <a href="https://www.linkedin.com/in/emma-mcdonald-brown-bb187a28/"><i class="fab fa-linkedin"></i></a>
                 </li>
                 <li>
-                    <a href="mailto:emma.mcdonald-brown@outlook.com?Subject=Contact from your CV Page" target="_top"><i class="far fa-envelope"></i></a>
+                    <a href="mailto:emma@embdeveloper.co.uk?Subject=Contact from your CV Page" target="_top"><i class="far fa-envelope"></i></a>
                 </li>
                 <li>
                     <a href="https://github.com/emcdonaldbrown" target="_top"><i class="fab fa-github"></i></a>
